add Slippage Tolerance screen for input

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -117,6 +117,9 @@
   "swap.swapScreen.swapButton": "SWAP",
   "swap.swapScreen.verifiedBy": "Verified by MuesliSwap",
   "swap.swapScreen.assetsIn": "This assets is in my portfolio",
+  "swap.swapScreen.defaultSlippage": "Default Slippage Tolerance",
+  "swap.swapScreen.slippageInfo": "Slippage tolerance is set as a percentage of the total swap value. Your transactions will not be executed if the price moves by more than this amount.",
+  "swap.swapScreen.enterSlippage": "Enter a value from 0% to 100%. You can also enter up to 1 decimal",
   "components.common.navigation.nftGallery": "NFT Gallery",
   "components.receive.addressmodal.BIP32path": "Derivation path",
   "components.receive.addressmodal.copiedLabel": "Copied",
