added select pools screen

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -114,6 +114,7 @@
   "swap.swapScreen.selectToken": "Select token",
   "swap.swapScreen.marketPrice": "Market price",
   "swap.swapScreen.slippageTolerance": "Slippage tolerance",
+  "swap.swapScreen.selectPool": "Select pool",
   "swap.swapScreen.swapButton": "SWAP",
   "swap.swapScreen.verifiedBy": "Verified by MuesliSwap",
   "swap.swapScreen.assetsIn": "This assets is in my portfolio",
@@ -524,6 +525,7 @@
   "global.assets.assetsLabel": "Assets",
   "global.assets.assetLabel": "Asset",
   "global.assets": "{qty, plural, one {asset} other {assets}}",
+  "global.pools": "{qty, plural, one {pool} other {pools}}",
   "global.availableFunds": "Available funds",
   "global.buy": "Buy",
   "global.cancel": "Cancel",
